[package]
name = "rssh_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "^0.9"
serde_json = "^1.0.57"
serde = "^1.0.115"
serde_derive = "^1.0.115"
regex = "^1.5"
clap = { version = "^4.2.7", features = ["derive"] }
tokio = { version = "^1.36.0", features = ["full"] }
anyhow = "^1.0.80"
tokio-stream = "^0.1.14"
log = "^0.4.21"
fern = "^0.6"
chrono = "^0.4"
